--- a/app.html
+++ b/app.html
@@ -4,11 +4,11 @@
         <title>Generator - JS</title>
         
 		<meta charset="utf-8">
-        <!-- Hotjar Tracking Code for https://localhost:8080/app.html -->
+        <!-- Hotjar Tracking Code for https://l3.elfak.ni.ac.rs/itemgenerator/app.html -->
         <script>
             (function(h,o,t,j,a,r){
                 h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                h._hjSettings={hjid:2991558,hjsv:6};
+                h._hjSettings={hjid:3127969,hjsv:6};
                 a=o.getElementsByTagName('head')[0];
                 r=o.createElement('script');r.async=1;
                 r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
