--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       id="qb-theme"
     />
 
-    <!-- Hotjar Tracking Code for https://l3.elfak.ni.ac.rs/itemgenerator/ -->
+    <!-- Hotjar Tracking Code for https://l3.elfak.ni.ac.rs/itemgenerator/index.html -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:3127968,hjsv:6};
+            h._hjSettings={hjid:3160994,hjsv:6};
             a=o.getElementsByTagName('head')[0];
             r=o.createElement('script');r.async=1;
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
@@ -77,9 +77,9 @@
             <h3>Unos pitanja i označavanje parametara <span onclick="expand()" class='fa fa-angle-double-down'></span></h3>
             <div class="helper" style="display:none">
                 <i>     
-                    Tekst pitanja se unosi u polju "Sablon pitanja".
-                    Nakon unosa teksta pitanja, korisnik može da označi deo teksta kao parametar za variranje pitanja, tako što selektuje željeni deo pitanja i pritisne desni klik, nakon čega će se pojaviti opcija "Oznaci deo pitanja za variranje".
-                    Klikom na ovu opciju, selektovani deo pitanja će se označiti kao parametar.
+                    1.Tekst pitanja se unosi u polju "Sablon pitanja".<br>
+                    2.korisnik može da označi deo teksta kao parametar za variranje pitanja, tako što selektuje željeni deo pitanja i pritisne desni klik, nakon čega će se pojaviti opcija "Oznaci deo pitanja za variranje".<br>
+                    Klikom na ovu opciju, selektovani deo pitanja će se označiti kao parametar. 
                     Svaki parametar se označava posebnom bojom, kako bi se jasno uočili delovi pitanja na osnovu kojih se varira pitanje.
                     Kada korisnik pritisne desni klik na već označeni deo pitanja za variranje, pojaviće se opcija "Obriši deo pitanja za variranje".
                     Klikom na ovu opciju, deo pitanja više neće biti označen kao parametar i tretiraće se kao fiksni deo pitanja.
@@ -231,6 +231,11 @@
                     Korisnički interfejs za unos kriterijuma tačnosti olakšava unos složenog logičkog izraza. 
                     Korisnik bira parametre i alternative koje učestvuju u izrazu, može da ih povezuje AND-om i 
                     OR-om i ubacuje zagrade.
+                    <strong>Ograničenja: </strong> 
+                    <ul>
+                        <li>Šablon odgovora može da ima samo jedan parametar odgovora.</li>
+                        <li>Isti parametar odgovora ne može da se koristi više puta.</li>
+                    </ul>
                     <br/>
                     <img src='slike/kriterijumiTacnosti/kriterijumiTacnosti.png' style='width:400px;height:200px'/>
                 </i>
