--- a/app.html
+++ b/app.html
@@ -4,17 +4,6 @@
         <title>Generator - JS</title>
         
 		<meta charset="utf-8">
-        <!-- Hotjar Tracking Code for https://l3.elfak.ni.ac.rs/itemgenerator/app.html -->
-        <script>
-            (function(h,o,t,j,a,r){
-                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                h._hjSettings={hjid:3161007,hjsv:6};
-                a=o.getElementsByTagName('head')[0];
-                r=o.createElement('script');r.async=1;
-                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-                a.appendChild(r);
-            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-        </script>
         
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='./css/index.css'/>
@@ -90,14 +79,16 @@
               <h3>Da li želite da uradite naše zadatke i na taj način nam pomognete u istraživanju?</h3>
               <br/>
               <div>
-                <button id="btnPrvi" class="btn btn-primary">Zelim da uradim laksi zadatak</button>
-                <button id="btnDrugi" class="btn btn-primary">Zalim da uradim tezi zadatak</button>
+                <button id="btnPrvi" class="btn btn-primary">Želim da uradim lakši zadatak</button>
+                <button id="btnDrugi" class="btn btn-primary">Želim da uradim teži zadatak</button>
               </div>
               <br/>
               <div>
                 <button id="btnPodseti" class="btn btn-secondary">Podseti me kasnije</button>
-                <button id="btnNe" class="btn btn-danger">Ne podsecaj me vise</button>
+                <button id="btnNe" class="btn btn-danger">Ne podsećaj me više</button>
               </div>
+              <br/>
+                <p style="color:red">*Zadatak će se otvoriti u novom tabu, tako da Vaš rad ostaje.</p>
             </div>
         </div>
 
@@ -235,6 +226,7 @@
                 }
             }
         </script>
+        <script src="timeme.js"></script>
         <!-- <script>
             jedino ovako
             document.getElementById('pr').innerHTML = "<input value='nesto' data-hj-allow/>"
