--- a/index.html
+++ b/index.html
@@ -20,18 +20,6 @@
       href="./dist/css/query-builder.default.css"
       id="qb-theme"
     />
-
-    <!-- Hotjar Tracking Code for https://l3.elfak.ni.ac.rs/itemgenerator/index.html -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:3160994,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
     
     </head>
     <body>
@@ -73,13 +61,13 @@
               <h3>Da li želite da uradite naše zadatke i na taj način nam pomognete u istraživanju?</h3>
               <br/>
             <div>
-                <button id="btnPrvi" class="btn btn-primary">Zelim da uradim laksi zadatak</button>
-                <button id="btnDrugi" class="btn btn-primary">Zalim da uradim tezi zadatak</button>
+                <button id="btnPrvi" class="btn btn-primary">Želim da uradim lakši zadatak</button>
+                <button id="btnDrugi" class="btn btn-primary">Želim da uradim teži zadatak</button>
             </div>
             <br/>
             <div>
                 <button id="btnPodseti" class="btn btn-secondary">Podseti me kasnije</button>
-                <button id="btnNe" class="btn btn-danger">Ne podsecaj me vise</button>
+                <button id="btnNe" class="btn btn-danger">Ne podsećaj me više</button>
             </div>
             </div>
         </div>
@@ -599,5 +587,6 @@
             }
         </script>
         <script src="index.js" type="module"></script>
+        <script src="timeme.js"></script>
     </body>
 </html>
