--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         </div>
 
         <div class="con">
+            <div style="color:red; display: none;" id="serverStop">Server je stopiran, nisu dostupne sve funkcionalnosti aplikacije!</div>
+
             <h2>Generator pitanja</h2>
             <p>Generator pitanja je aplikacija koja omogućava zadavanje modela pitanja na osnovu koga se generiše više instanci pitanja u GIFT formatu.
                 <br>
