--- a/index.html
+++ b/index.html
@@ -590,5 +590,6 @@
         </script>
         <script src="index.js" type="module"></script>
         <script src="timeme.js"></script>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </body>
 </html>
