--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                     <div class="main-navbar-left" style="padding-left: 10px">
                         <li class="open-item"><a href="./" class="open-link">Uputstvo</a></li>
                         <li><a href="./app.html" id="aplikacija">Aplikacija</a></li>
-                        <li id="laksi-item" style="display: none"><a href="./app.html?id=1" id="laksi">Lakši zadatak</a></li>
-                        <li id="tezi-item" style="display: none"><a href="./app.html?id=2" id="tezi">Teži zadatak</a></li>
+                        <li id="laksi-item"><a href="./app.html?id=1" id="laksi">Lakši zadatak</a></li>
+                        <li id="tezi-item"><a href="./app.html?id=2" id="tezi">Teži zadatak</a></li>
+                        <!-- <li id="laksi-item" style="display: none"><a href="./app.html?id=1" id="laksi">Lakši zadatak</a></li>
+                        <li id="tezi-item" style="display: none"><a href="./app.html?id=2" id="tezi">Teži zadatak</a></li> -->
                     </div>
                     <div class="main-navbar-left" style="padding-right: 10px;">
                         <li style="color: #999">Pozdrav &nbsp;<span id="pozdrav"></span></li>
@@ -40,13 +42,12 @@
             </ul>
         </nav>
 
-        <div style="display: flex;justify-content: center">
+        <!-- <div style="display: flex;justify-content: center">
             <div id="serverStop">Server je stopiran, nisu dostupne sve funkcionalnosti aplikacije!</div>
-        </div>
+        </div> -->
 
-        <div class="overlay" id="overlay" hidden>
+        <!-- <div class="overlay" id="overlay" hidden>
             <div class="confirm-box">
-              <!-- <div id="btnClose" class="close">&#10006;</div> -->
               <h3>Da li želite da uradite naše zadatke i na taj način nam pomognete u istraživanju?</h3>
               <br/>
             <div>
@@ -59,7 +60,7 @@
                 <button id="btnNe" class="btn btn-danger">Ne podsećaj me više</button>
             </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="con">
             <ul id="navigacija">
