--- a/app.html
+++ b/app.html
@@ -29,8 +29,10 @@
                     <div class="main-navbar-left" style="padding-left: 10px">
                         <li><a href="./">Uputstvo</a></li>
                         <li id="aplikacija-item"><a href="./app.html" id="aplikacija">Aplikacija</a></li>
-                        <li id="laksi-item" style="display: none;"><a href="./app.html?id=1" id="laksi">Lakši zadatak</a></li>
-                        <li id="tezi-item" style="display: none;"><a href="./app.html?id=2" id="tezi">Teži zadatak</a></li>
+                        <li id="laksi-item"><a href="./app.html?id=1" id="laksi">Lakši zadatak</a></li>
+                        <li id="tezi-item"><a href="./app.html?id=2" id="tezi">Teži zadatak</a></li>
+                        <!-- <li id="laksi-item" style="display: none;"><a href="./app.html?id=1" id="laksi">Lakši zadatak</a></li>
+                        <li id="tezi-item" style="display: none;"><a href="./app.html?id=2" id="tezi">Teži zadatak</a></li> -->
                     </div>
                     <div class="main-navbar-left" style="padding-right: 10px;">
                         <li style="color: #999">Pozdrav &nbsp;<span id="pozdrav"></span></li>
@@ -39,13 +41,12 @@
             </ul>
         </nav>
 
-        <div style="display: flex;justify-content: center">
+        <!-- <div style="display: flex;justify-content: center">
             <div id="serverStop">Server je stopiran, nisu dostupne sve funkcionalnosti aplikacije!</div>
-        </div>
+        </div> -->
 
-        <div class="overlay" id="overlay" hidden>
+        <!-- <div class="overlay" id="overlay" hidden>
             <div class="confirm-box">
-              <!-- <div id="btnClose" class="close">&#10006;</div> -->
               <h3>Da li želite da uradite naše zadatke i na taj način nam pomognete u istraživanju?</h3>
               <br/>
               <div>
@@ -60,9 +61,9 @@
               <br/>
                 <p style="color:red">*Zadatak će se otvoriti u novom tabu, tako da Vaš rad ostaje.</p>
             </div>
-        </div>
+        </div> -->
 
-        <div class="overlay" id="overlay2" hidden>
+        <!-- <div class="overlay" id="overlay2" hidden>
             <div class="confirm-box" id="confirm-box-smaller">
                 <div id="btnClose" class="close">&#10006;</div>
                 <h3>Da li zelite da uradite sledeci zadatak?</h3>
@@ -70,7 +71,7 @@
                 <button id="btnYes" class="btn btn-primary">Da</button>
                 <button id="btnNo" class="btn btn-secondary">Ne</button>
             </div>
-        </div>
+        </div> -->
 
         <div class="con-app">
             <div id="tekstZadatak" style="display:none">
@@ -127,7 +128,7 @@
             <button id='btnGenerisi' class="btn btn-primary">Generisi pitanja</button>
             <br/> <br/>
             <button id='btnObrisiModel' class="btn btn-danger">Obrisi model pitanja</button> <br/> <br/>
-            <button  class="btn btn-primary" id="posaljiOdgovor">Posalji odgovor</button>
+            <!-- <button  class="btn btn-primary" id="posaljiOdgovor">Posalji odgovor</button> -->
             <p style="color:red;display: none;" id="podsetikZaSlanje">Ne zaboravite da posaljete odgovor</p>
             <br/>
             <!-- <label>Rezultat: </label><textarea rows='20' cols='50' id='rezultat' class='form-control' data-hj-allow></textarea> <br/> -->
@@ -184,7 +185,8 @@
         </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="./dist/js/query-builder.standalone.js"></script>    
         <script type='module' src='src.js'></script>
         <script>
