--- a/app.html
+++ b/app.html
@@ -129,7 +129,7 @@
             <br/> <br/>
             <button id='btnObrisiModel' class="btn btn-danger">Obrisi model pitanja</button> <br/> <br/>
             <!-- <button  class="btn btn-primary" id="posaljiOdgovor">Posalji odgovor</button> -->
-            <p style="color:red;display: none;" id="podsetikZaSlanje">Ne zaboravite da posaljete odgovor</p>
+            <!-- <p style="color:red;display: none;" id="podsetikZaSlanje">Ne zaboravite da posaljete odgovor</p> -->
             <br/>
             <!-- <label>Rezultat: </label><textarea rows='20' cols='50' id='rezultat' class='form-control' data-hj-allow></textarea> <br/> -->
             <label>Rezultat: </label><div id='rezultat'></div> <br/>    
